@@ -1381,6 +1381,10 @@
 				Name="File Formats"
 				>
 				<File
+					RelativePath="..\src\il_blp.c"
+					>
+				</File>
+				<File
 					RelativePath="..\src\il_bmp.c"
 					>
 					<FileConfiguration
@@ -1622,6 +1626,14 @@
 				</File>
 				<File
 					RelativePath="..\src\il_exr.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\src\il_fits.c"
+					>
+				</File>
+				<File
+					RelativePath="..\src\il_ftx.c"
 					>
 				</File>
 				<File
